Add first integration test
